--- a/contact.html
+++ b/contact.html
@@ -116,10 +116,18 @@
                 <label for="exampleFormControlTextarea2">Elaborate Your Concern</label>
                 <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
             </div>
-            <button class="button" data-text="Awesome">
-                <span class="actual-text">&nbsp;submit&nbsp;</span>
-                <span aria-hidden="true" class="hover-text">&nbsp;submit&nbsp;</span>
-            </button>
+            <div class="d-flex justify-content-between">
+                <button class="button" data-text="Awesome">
+                    <span class="actual-text">&nbsp;Reset&nbsp;</span>
+                    <span aria-hidden="true" class="hover-text">&nbsp;Reset&nbsp;</span>
+                </button>
+                <button class="button" data-text="Awesome">
+                    <span class="actual-text">&nbsp;submit&nbsp;</span>
+                    <span aria-hidden="true" class="hover-text">&nbsp;submit&nbsp;</span>
+                </button>
+                
+            </div>
+           
         </form>
 
     </div>
